<resources>
    <string name="app_name">Proof Pic</string>
    <string name="image_description">The imageView to show image from album or camera</string>
    <string name="loading_description">The imageView to show loading image</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="save">save</string>
    <string name="share">share</string>
    <string name="delete">delete</string>
    <string name="reset">reset</string>
    <string name="result">Result</string>
    <string name="results">Results</string>
    <string name="results_activity">Previous results</string>
    <string name="prev_result">Previous result</string>
    <string name="title_activity_image_processing">ImageProcessing</string>
    <string name="process_name">Crop and Rotation</string>
    <string name="clock_wise">90</string>
    <string name="counter_clock_wise">-90</string>
    <string name="ok">ok</string>
    <string name="main">Main</string>
    <string name="request">Request</string>
    <string name="selected">Selected image</string>
    <string name="template_activity">Select the template</string>
    <string name="title01">Man template1</string>
    <string name="title02">Man template2</string>
    <string name="title03">Man template3</string>
    <string name="title04">Man template4</string>
    <string name="title05">Man template5</string>
    <string name="title06">Woman template1</string>
    <string name="title07">Woman template2</string>
    <string name="title08">Woman template3</string>
    <string name="title09">Woman template4</string>
    <string name="title10">Woman template5</string>
    <string name="loadingActivity">Now Processing..</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>
