<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/test_image" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonGallery"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/gallery"
                tools:text="Album" />

            <Button
                android:id="@+id/buttonCamera"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/camera"
                tools:text="Camera" />

            <Button
                android:id="@+id/buttonSave"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/save"
                tools:text="Save" />

            <Button
                android:id="@+id/buttonReset"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/reset"
                tools:text="Reset" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>