<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ImgProcessActivity">

    <TextView
        android:id="@+id/tvProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:text="@string/process_name"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/ivProcess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivProcess"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivProcess"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/image_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test_image" />

    <Button
        android:id="@+id/buttonCcw"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/counter_clock_wise"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/ivProcess"
        app:layout_constraintTop_toBottomOf="@+id/ivProcess" />

    <Button
        android:id="@+id/buttonCw"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/clock_wise"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/ivProcess"
        app:layout_constraintTop_toBottomOf="@+id/ivProcess" />

    <Button
        android:id="@+id/buttonOk"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/ok"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCw"
        app:layout_constraintStart_toEndOf="@+id/buttonCcw"
        app:layout_constraintTop_toBottomOf="@+id/ivProcess" />

</androidx.constraintlayout.widget.ConstraintLayout>